--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-<body bgcolor="
+<body bgcolor="#d2b48c"></body>
 title: Tekton Construction
 description: Bookmark this to keep an eye on my project updates!
